<resources>
    <string name="app_name">RandomNumber</string>
    <string name="str_button_add">번호 추가하기</string>
    <string name="str_button_init">초기화</string>
    <string name="str_text_number1">1</string>
    <string name="str_text_number2">1</string>
    <string name="str_text_number3">1</string>
    <string name="str_text_number4">1</string>
    <string name="str_text_number5">1</string>
    <string name="str_button_run">자동 생성 시작</string>
</resources>